# ticket-booking

./: Cargo.toml  README.md  dev_pod.yaml
db_init/: 01_orders.sql  01_tickets.sql  02_tickets.sql  99_test_data.sql
doc/: architecture.md  use_cases.md
src/: booking.rs  main.rs
src/model/: mod.rs  order.rs  ticket.rs
src/repository/: errors.rs  interface.rs  kafka_event_repository.rs  message.rs  mod.rs  storage.rs
src/rest_api/: context.rs  mappers.rs  mod.rs  response.rs
