[package]
name = "ticket-booking"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.23"
env_logger = "0.10.0"
log = "0.4.17"
rdkafka = "0.29.0"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "time"] }
