[package]
name = "ticket-booking"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10.0"
log = "0.4.17"
chrono = "0.4.23"
warp = "0.3.3"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.3.0", features = ["v4"] }
serde_json = "1.0.93"
serde = { version = "1.0.152", features = ["derive"] }
# futures = "0.3.26"
# rdkafka = "0.29.0"
